fix overflow hidden on safari

--- a/styles.css
+++ b/styles.css
@@ -209,6 +209,7 @@ main {
 	text-align: center;
 }
 @media (max-width: 815px) {
+	html,
 	body {
 		overflow-x: hidden;
 	}
